--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,5 @@ services:
         DEV: true
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
     command: >
-      sh -c "cd app/ && poetry run python manage.py runserver 0.0.0.0:8000"
+      sh -c "poetry run python manage.py runserver 0.0.0.0:8000"
