--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,4 +9,20 @@ services:
     ports:
       - "8000:8000"
     command: >
-      sh -c "poetry run python manage.py runserver 0.0.0.0:8000"
+      sh -c "python manage.py runserver 0.0.0.0:8000"
+    environment:
+      - DB_HOST=db
+      - DB_NAME=recipes
+      - DB_USER=someuser
+      - DB_PASSWORD=somepw
+      - ENV=cloud-env
+    depends_on:
+      - db
+  db:
+    image: postgres:14-alpine
+    environment:
+      - POSTGRES_DB=recipes
+      - POSTGRES_USER=someuser
+      - POSTGRES_PASSWORD=somepw
+    ports:
+      - "5432:5432"
