--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ authors = ["Juan Valencia"]
 python = "^3.9"
 Django = "^4.1.3"
 djangorestframework = "~3.14.0"
+psycopg2 = "^2.9.5"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0.0"
