Create wait_for_db command

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,7 @@ services:
       - DB_USER=someuser
       - DB_PASSWORD=somepw
       - ENV=cloud-env
-    depends_on:
+    depends_on:  # Ensures that the DB service starts, but does not ensure the application starts
       - db
   db:
     image: postgres:14-alpine
