--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ python = "^3.9"
 Django = "^4.1.3"
 djangorestframework = "~3.14.0"
 psycopg2 = "^2.9.5"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0.0"
