--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ djangorestframework = "~3.14.0"
 psycopg2 = "^2.9.5"
 python-dotenv = "^0.21.0"
 parameterized = "^0.8.1"
+drf-spectacular = "^0.25.1"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0.0"
