--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "recipes"
+name = "config"
 version = "0.1.0"
 description = ""
 authors = ["Juan Valencia"]
@@ -12,6 +12,7 @@ psycopg2 = "^2.9.5"
 python-dotenv = "^0.21.0"
 parameterized = "^0.8.1"
 drf-spectacular = "^0.25.1"
+pillow = "^9.4.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^6.0.0"
